# pum

./: .gitignore  .pre-commit-config.yaml  .travis.yaml  .travis.yml  404.html  BACKWARD_COMPATIBILITY.md  Dockerfile  MANIFEST  README.md  generate_demo_report.py  index.html  objects.inv  pum.py  pyproject.toml  requirements.txt  setup.py  test_version_switch_demo.py
.ci/: setup_db.sh
.deploy/: deploy_to_pypi.sh  pypirc_template
.github/: dependabot.yml  release.yml
.github/workflows/: build-docker-image.yml  deploy-to-pypi.yml  (+4 more)
advanced/: index.html
cli/: index.html
config/: index.html
configuration/: index.html
core/: checker.py  deltapy.py  upgrader.py
docs/: index.md  mkdocs.yml  requirements.txt  update_changelog_docs.py  update_cli_docs.py
getting_started/: index.html
hooks/: index.html
pum/: __init__.py  __main__.py  _version.py  changelog.py  changelog_utils.py  checker.py  cli.py  config.py  config_model.py  connection.py  database.py  dependency_handler.py  dumper.py  exceptions.py  feedback.py  hook.py  info.py  manager.py  migration_hook.py  migration_hooks.py  migration_parameter.py  migration_parameter_definition.py  parameter.py  pum.py  pum_config.py  report_generator.py  role_manager.py  schema_migrations.py  sql_content.py  text_processor.py  upgrader.py
requirements/: base.txt  development.txt
roles/: index.html
scripts/: pum  pum.py  run_postgis.sh  test_checker_cli.sh
test/: test_changelog.py  test_checker.py  test_config.py  test_database.py  test_dependency_handler.py  test_dump_restore.sh  test_dumper.py  test_feedback.py  test_hooks.py  test_pum.sh  test_roles.py  test_schema_migrations.py  test_sql_content.py  test_transaction_fix.py  test_upgrader.py
(+253 files in other folders)
